The drawing canvas was broken on iPhone, fixed

--- a/firebasetst.css
+++ b/firebasetst.css
@@ -82,6 +82,10 @@ em {
 
 /* Drawing */
 
+#canvasdiv {
+  clear: both;
+}
+
 #colorholder {
   width: 480px;
   height: 30px;
